src/TeamTavern/Client/Components/Footer.scss
.footer {
    display: block;
    background: white;
    border-top: 1px solid #ccc;
    width: 100%;
}

.footer-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
    color: $primary-color;
    font-weight: 500;
    padding: 0 21px;
    margin: auto;

    > * {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100%;
        min-height: 40px;
        text-align: center;
    }

    @media screen and (min-width: 550px) {
        flex-direction: row;

        > * {
            width: unset;
        }
    }

}

.footer-icon {
    font-size: 26px;
    margin-left: 14px;
}

